Fixed multiselect container overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -700,7 +700,7 @@ body {
             padding: 30px 0;
             .multiselect-box {
                 .select-container {
-                    width: 100%;
+                    width: calc(100% - 35px);
                 }
             }
         }
